fix: Resolving an issue where html `height` elements would overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,8 +18,7 @@ p {
 html {
   margin: 0;
   width: 100%;
-  height: 100vh;
-  
+  height: 91.5vh;
 }
 
 body {
